new project use org.apache.commons.beanutils.
old class BeanUtils deleted, PropertyAccessFailure drastically reduced, the functionality of BeanUtils is now partially in PropertyUtils of org.apache.commons.beanutils and also in BeanPropertyAccessor in the riena.ui.ridgets project